third_party/rust/inherent/tests/ui/not-trait-impl.stderr
error: must be placed on a trait impl
 --> tests/ui/not-trait-impl.rs:5:1
  |
5 | #[inherent]
  | ^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `inherent` (in Nightly builds, run with -Z macro-backtrace for more info)
