third_party/rust/inherent/tests/ui/not-trait-impl.rs
use inherent::inherent;

struct Struct;

#[inherent]
impl Struct {
    fn f() {}
}

fn main() {}
